--- a/client/package.json
+++ b/client/package.json
@@ -5,22 +5,25 @@
     "re:build": "bsb -make-world",
     "re:watch": "bsb -make-world -w -ws _ ",
     "re:clean": "bsb -clean-world",
-    "vite:serve": "vite",
+    "parcel:serve": "parcel serve index.html",
+    "parcel:build": "parcel build index.html",
     "update-schema": "get-graphql-schema http://localhost:5000 -j > graphql_schema.json"
   },
   "keywords": [],
   "author": "Jannis Isensee",
   "license": "MIT",
   "devDependencies": {
-    "@reasonml-community/graphql-ppx": "^1.0.0-beta.22",
     "bs-platform": "^8.3.2",
-    "vite": "^1.0.0-rc.9",
-    "vite-plugin-react": "^3.0.2"
+    "parcel": "^2.0.0-beta.1"
   },
   "dependencies": {
     "@apollo/client": "^3.2.5",
-    "@pika/react": "^16.13.1",
-    "@pika/react-dom": "^16.13.1",
+    "@fortawesome/fontawesome-free": "^5.15.1",
+    "@reasonml-community/graphql-ppx": "^1.0.0",
+    "bulma": "^0.9.1",
+    "graphql": "^15.4.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "reason-apollo-client": "^1.0.0-beta.1",
     "reason-react": "^0.9.1"
   }
