--- a/client/package.json
+++ b/client/package.json
@@ -5,16 +5,19 @@
     "re:build": "bsb -make-world",
     "re:watch": "bsb -make-world -w -ws _ ",
     "re:clean": "bsb -clean-world",
+    "parcel:clean": "rimraf ./.parcel-cache ./dist",
     "parcel:serve": "parcel serve index.html",
     "parcel:build": "parcel build index.html",
-    "update-schema": "get-graphql-schema http://localhost:5000 -j > graphql_schema.json"
+    "update-schema": "get-graphql-schema http://localhost:5000/graphql -j > graphql_schema.json"
   },
   "keywords": [],
   "author": "Jannis Isensee",
   "license": "MIT",
   "devDependencies": {
     "bs-platform": "^8.3.2",
-    "parcel": "^2.0.0-beta.1"
+    "get-graphql-schema": "^2.1.2",
+    "parcel": "^2.0.0-beta.1",
+    "rimraf": "^3.0.2"
   },
   "dependencies": {
     "@apollo/client": "^3.2.5",
