--- a/client/bsconfig.json
+++ b/client/bsconfig.json
@@ -29,7 +29,8 @@
   "bs-dependencies": [
     "reason-react",
     "@reasonml-community/graphql-ppx",
-    "reason-apollo-client"
+    "reason-apollo-client",
+    "re-classnames"
   ],
   "refmt": 3
 }
