--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "@reasonml-community/graphql-ppx": "^1.0.0",
     "bulma": "^0.9.1",
     "graphql": "^15.4.0",
+    "re-classnames": "^5.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "reason-apollo-client": "^1.0.0-beta.1",
